# practice-fork-up

./: .gitignore
rdx/fork-blob/: CMakeLists.txt  Dockerfile  Makefile  create_bin.py  docker-compose.yml  fork_up.cpp  fork_up.py  fork_up_2.cpp  hello_s3.cpp  manifest.txt  pyproject.toml  run_s3.sh  small.manifest  test-file.txt  uploader.py
rdx/fork-blob/s3/.minio.sys/: format.json
rdx/fork-blob/s3/.minio.sys/tmp/.trash/5497eb9f-4fd6-4332-a30c-8f27e84f70d1/: xl.meta.bkp
rdx/fork-blob/s3/.minio.sys/tmp/.trash/74c601b2-a3f7-4919-af6d-8bc849e2842e/: xl.meta.bkp
rdx/fork-blob/s3/.minio.sys/tmp/.trash/90bc7ce1-d358-4f0d-94cd-fd8507d3a99d/: xl.meta.bkp
rdx/fork-blob/s3/.minio.sys/tmp/.trash/c40c1dbf-5d9c-4112-8b03-b7c0fd00b359/: xl.meta.bkp
rdx/fork-blob/s3/.minio.sys/tmp/.trash/e1068cf6-645d-4ba2-9eb4-c5dff340fbc8/: xl.meta.bkp
rdx/fork-blob/s3/.minio.sys/tmp/.trash/e26fd9d1-425e-46b8-a5de-dd2d4ca08ae1/: xl.meta.bkp
rdx/fork-blob/src/: fork_up.cpp  fork_up.hpp
rdx/fork-blob/src/file_helper/: helper.cpp  helper.hpp
rdx/fork-blob/src/s3_client/: client.cpp  client.hpp
rdx/fork-blob/testsuite/: test_fork_up.cpp
rdx/fork-blob/testsuite/helper/: abs_path.hpp.in  generate  generate.cpp
rdx/fork-blob/testsuite/modified/: small.manifest
rdx/fork-blob/testsuite/results/: small.manifest
